# stingray-plugin

./: .gitattributes  .gitignore  LICENSE.md  README.md  make.rb  package.json  spm-packages.sjson
.github/: PULL_REQUEST_TEMPLATE.md
cmake/: CMakeCompiler.cmake  CMakeMacros.cmake  CMakeManifest.cmake  CMakePlatforms.cmake  CMakePlugin.cmake  CMakeSettings.cmake  Toolchain-Android.cmake  Toolchain-PS4.cmake  Toolchain-XBoxOne.cmake
docs/: config_adoc_lua_reference.json  make_plugin_docs.rb
editor/: CMakeLists.txt  editor_plugin.cpp
editor/typescript/: CMakeLists.txt  example-actions.ts  example-view.ts  package.json  tsconfig.json
editor_dll/: CMakeLists.txt  editor_dll.cpp
engine/: CMakeLists.txt  engine_plugin.cpp
plugin/: example-actions.js  example-spec.js  example-view.js  example.stingray_plugin  my-plugin.js  stingray-example.plugin
plugin/example_resources/: ADD_STINGRAY_PROJECT_RESOURCES.md  example_plugin.flow_node_definitions
plugin/sample_project/: app.lua  boot.package  floor.fbx  floor.material  floor.unit  global.physics_properties  sample.level  sample.stingray_project  settings.ini  wall.fbx  wall.material  wall.unit
stingray_sdk/editor_foundation/: node-editor.d.ts  properties.d.ts  stingray.d.ts  types.d.ts  widgets.d.ts
stingray_sdk/editor_plugin_api/: editor_plugin_api.h
stingray_sdk/engine_plugin_api/: default_plugin_suffix.h  plugin_api.h  plugin_api_types.h  plugin_c_api.h  plugin_scene_database_api.h
stingray_sdk/plugin_foundation/: allocator.h  array.h  array.inl  assert.h  bucket_iterator.h  bucket_iterator.inl  buffer.h  collection_tools.h  collection_tools.inl  color.h  com_ptr.h  com_ptr.inl  const_config.h  encoding.h  encoding.inl  entity_component.h  entity_component.inl  exception_handling.h  flow.h  functional.h  (+50 more)
tools/: common.rb  hot-reload-post-link.bat  sjson.rb  spm.rb
(+53 files in other folders)
